moe fixes